--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -18,6 +18,6 @@ metadata:
   tags: ["go", "sscs", "sbom", "acs"] 
 spec:
   type: service
-  owner: user:guest 
+  owner: jkopriva 
   lifecycle: experimental
  
